# euddraft

./: .gitignore  CHANGELOG.md  CHANGELOG_ko.md  Pipfile  README.md  applyeuddraft.py  autoupdate.py  ed_profile.py  euddraft.py  freezeMpq.pyd  libepScriptLib.dylib  lprof_euddraft.py  mkdist.py  msgbox.py  pluginLoader.py  pyproject.toml  readconfig.py  requirements.txt  setup.py
edpkgutil/: cleanDir.py  packageZip.py  verifyPkg.py
latest/: BETA_VERSION  VERSION  euddraft0.8.6.5.zip.sig  euddraft0.8.6.7.zip.sig  euddraft0.8.6.8.zip.sig  euddraft0.8.6.9.zip.sig  euddraft0.8.7.0.zip.sig  euddraft0.8.7.1.zip.sig  euddraft0.8.7.2.zip.sig  euddraft0.8.7.3.zip.sig  euddraft0.8.7.4.zip.sig  euddraft0.8.7.5.zip.sig  euddraft0.8.7.6.zip.sig  euddraft0.8.7.7.zip.sig  euddraft0.8.7.8.zip.sig  euddraft0.8.7.9.zip.sig  euddraft0.8.8.0.zip.sig  euddraft0.8.8.1.zip.sig  euddraft0.8.9.0.zip.sig  euddraft0.8.9.1.zip.sig  euddraft0.8.9.2.zip.sig  euddraft0.8.9.3.zip.sig  euddraft0.8.9.4.zip.sig  euddraft0.8.9.5.zip.sig  euddraft0.8.9.6.zip.sig  euddraft0.8.9.7.zip.sig  euddraft0.8.9.8.zip.sig  euddraft0.8.9.9.zip.sig
lib/: draw.py  freezeMpq.pyd  soundlooper.py  sqc.py
lib/ko_KR/LC_MESSAGES/: eudplib.po
plugins/: MSQC.py  MurakamiShiinaQC.py  bgmplayer.py  cammove.py  chatEvent.py  dataDumper.py  eudTurbo.py  noAirCollision.py  unlimiter.py
signature/: publickey.cer
