[tool.poetry]
name = "euddraft"
version = "0.10.1.3"
description = "Framework for creating & applying various plugins to StarCraft map."
authors = ["armoha <kein0011@naver.com>", "Park Hyun Woo <phu54321@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
cx-Freeze = "^7.2.0"
eudplib = { path = "../eudplib" }
rich = "^13.8.1"
openpyxl = "^3.1.3"
typing_extensions = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
