[project]
name = "euddraft"
version = "0.10.2.5"
description = "Framework for creating & applying various plugins to StarCraft map."
authors = [
    { name = "armoha", email = "kein0011@naver.com" },
    { name = "Park Hyun Woo", email = "phu54321@naver.com" },
]
requires-python = ">= 3.10, < 3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "cx-Freeze>=8.3.0,<9",
    "rich>=13.8.1,<14",
    "openpyxl>=3.1.3,<4",
    "typing_extensions>=4.12.2,<5",
    "eudplib>=0.80.6,<0.81",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
